[package]
name = "php-tokio"
repository = "https://github.com/danog/php-tokio"
homepage = "https://github.com/danog/php-tokio"
license = "Apache-2.0"
description = "Use any async Rust library from PHP!"
version = "0.1.6"
authors = ["Daniil Gentili <daniil@daniil.it>"]
edition = "2021"

[dependencies]
ext-php-rs = "^0.12.0"
tokio = { version = "1", features = ["full"] }
tokio-pipe = "^0.2"
lazy_static = "1.4.0"
libc = "^0.2"
php-tokio-derive = { version = "=0.2.0", path = "./crates/macros" }


[workspace]
members = [
    "crates/macros",
    "examples/reqwest",
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs"]

