[package]
name = "php-tokio"
repository = "https://github.com/danog/php-tokio"
homepage = "https://github.com/danog/php-tokio"
license = "Apache-2.0"
description = "Use any async Rust library from PHP!"
version = "0.1.7"
authors = ["Daniil Gentili <daniil@daniil.it>"]
edition = "2021"

[dependencies]
ext-php-rs = { version = "^0.15.6", features = ["closure"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
libc = "^0.2"
php-tokio-derive = { version = "=0.2.0", path = "./crates/macros" }
tokio-util = { version = "0.7.18", optional = true }

[features]
revolt = []
native = ["tokio-util"]

[workspace]
members = [
    "crates/macros",
    "examples/reqwest",
    "examples/reqwest-native",
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs"]

