[package]
name = "example-reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
php-tokio = "^0.1"
nicelocal-ext-php-rs = { version = "^0.10.3", features = ["anyhow"] }
reqwest = "^0.11"