[package]
name = "example-reqwest"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
php-tokio = { path = "../.." }
ext-php-rs = { version = "^0.15.6", features = ["anyhow"] }
reqwest = "^0.11"
anyhow = "^1.0"
